[gd_scene load_steps=4 format=3 uid="uid://blu15ehhb5avh"]

[ext_resource type="Script" path="res://addons/hyh.digression/editor/branches/EditorMatchBranchValue.gd" id="1_jkr88"]
[ext_resource type="PackedScene" uid="uid://c1584iplg8kg5" path="res://addons/hyh.digression/editor/controls/VariableValueEditControl.tscn" id="2_feac7"]
[ext_resource type="Texture2D" uid="uid://c4l5p4t0wt4i8" path="res://addons/hyh.digression/icons/icon_remove.svg" id="3_7f4ia"]

[node name="BranchValue" type="MarginContainer"]
offset_right = 245.0
offset_bottom = 66.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_jkr88")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 9

[node name="HSeparator" type="HSeparator" parent="VB"]
layout_mode = 2

[node name="HorizontalLayout" type="HBoxContainer" parent="VB"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="VB/HorizontalLayout"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="VB/HorizontalLayout/GridContainer"]
layout_mode = 2
text = "Value:"

[node name="ValueEdit" parent="VB/HorizontalLayout/GridContainer" instance=ExtResource("2_feac7")]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="VB/HorizontalLayout"]
layout_mode = 2
icon = ExtResource("3_7f4ia")
flat = true

[connection signal="value_changed" from="VB/HorizontalLayout/GridContainer/ValueEdit" to="." method="_on_value_edit_value_changed"]
[connection signal="pressed" from="VB/HorizontalLayout/RemoveButton" to="." method="_on_remove_button_pressed"]
